// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shinkansen-cogs/cogs/checkbox <Component /> With additional props renders 1`] = `
<div
  className="MOCK FEED TYPE"
>
  <h3>
    Top Songs
  </h3>
  <MockOrder
    feedType="MOCK FEED TYPE"
    order="MOCK ORDER"
  />
  <MockReset
    feedType="MOCK FEED TYPE"
    order="MOCK ORDER"
  />
  <MockLatest
    feedType="MOCK FEED TYPE"
    onClick={[Function]}
    order="MOCK ORDER"
  />
  <MockSongs
    items={
      [
        {
          "artistName": "MOCK ARTIST NAME",
          "artistUrl": "MOCK ARTIST URL",
          "artworkUrl100": "MOCK ARTWORK URL 100",
          "copyright": "MOCK COPYRIGHT",
          "kind": "MOCK KIND",
          "name": "MOCK NAME",
          "releaseDate": "2020-11-16",
          "url": "MOCK URL",
        },
      ]
    }
  />
</div>
`;

exports[`shinkansen-cogs/cogs/checkbox <Component /> With required props renders 1`] = `
<div
  className="MOCK FEED TYPE"
>
  <h3>
    Top Songs
  </h3>
  <MockOrder
    feedType="MOCK FEED TYPE"
    order="by-none"
  />
  <MockReset
    feedType="MOCK FEED TYPE"
    order="by-none"
  />
  <MockLatest
    feedType="MOCK FEED TYPE"
    onClick={[Function]}
    order="by-none"
  />
  <MockSongs
    items={[]}
  />
</div>
`;
